istiofiles/dr-cheese-quizz-question-cb.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cheese-quizz-question
spec:
  host: cheese-quizz-question
  trafficPolicy:
    connectionPool:
      http:
        http2MaxRequests: 100
        maxRequestsPerConnection: 10
      tcp:
        maxConnections: 10
    loadBalancer:
      simple: ROUND_ROBIN
    outlierDetection:
      baseEjectionTime: 1m
      consecutive5xxErrors: 1
      interval: 30s
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
